# Math-to-Manim-CH

./: .gitignore  01_数学可视化逻辑__mathematical_visualization_logic__.md  02_ai_交互与生成__ai_interaction___generation__.md  03_manim_场景__manim_scene__.md  04_三维场景与相机__3d_scene___camera__.md  05_动画编排脚本__animation_orchestration_script__.md  06_项目文档与说明__project_documentation__.md  07_辅助工具类_函数__utility_classes_functions__.md  AGENTS.md  README.md  disk-space-audit.ps1  pyproject.toml  requirements-system.txt  zzzz.md
.github/workflows/: ci.yml
.hermes/: erdos_unit_distance_prompt.md
.hermes/plans/: ErdosUnitDistanceProblem_prompt.txt
docs/: ARCHITECTURE.md  ARTIFACT_SCHEMAS.md  DEPLOYMENT_ROADMAP.md  DOMAIN_SKILLS.md  EVAL_STRATEGY.md  HERMES_LEARNS_MANIM.md  MIGRATION_NOTES.md  PRIME_INTELLECT_RL.md  README.md  ROADMAP.md
docs/showcase/: README.md
environments/math_to_manim/: README.md  pyproject.toml
environments/math_to_manim/m2m2_visual_repair/: __init__.py  environment.py  scoring.py
environments/math_to_manim/m2m2_visual_repair/configs/: followup_infer.toml  followup_orch.toml  followup_train.toml  repair_infer.toml  repair_orch.toml  repair_train.toml  smoke_infer.toml  smoke_orch.toml  smoke_train.toml
environments/math_to_manim/m2m2_visual_repair/data/: repair_tasks.jsonl  repair_tasks_sample.jsonl
environments/math_to_manim/math_to_manim/: __init__.py
evals/: prompt_suite.yaml
examples/reference/: limit_tangent_reference.py
math_to_manim/: __init__.py  cli.py  config.py  eval_runner.py
math_to_manim/agents/: __init__.py  base.py  codegen.py  curriculum.py  intent.py  math_enrichment.py  prerequisite_graph.py  publisher.py  render.py  repair.py  scene_spec.py  static_review.py  storyboard.py  video_review.py
math_to_manim/app/: api.py  (+2 more)
prompts/: epic_improved_from_math_to_manim.md
scripts/: bootstrap-render.sh
(+36 files in other folders)
